# infrad

./: .bumpversion.cfg  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.org  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
infrad/: console.py  core.py  discipline.py  epcserver.py  events.py  passtore.py  plugin.py  setting.py  utils.py  zmqclient.py
infrad/domain/: models.py
infrad/endpoints/: browser_plugin.py  discipline.py  emacsepc_plugin.py  meditation_plugin.py  motivation_plugin.py  plugin_endpoint.py  scheduler_plugin.py  screenlock_plugin.py
infrad/serializers/: command_result_serializer.py  command_serializer.py
infrad/shared/: consts.py  domain_model.py  events.py  request_object.py  response_object.py  use_case.py
infrad/use_cases/: command_execute_use_case.py  request_objects.py
tests/: context.py  test_passchanger.py  test_screenlocker.py
tests/domain/: test_command.py  test_command_result.py
tests/endpoints/: test_plugin_endpoint.py
tests/serializers/: test_command_result_serializer.py  test_command_serializer.py
tests/shared/: test_request_object.py  test_response_object.py
tests/use_cases/: test_execute_command_request_objects.py  test_execute_command_use_case.py
